--- a/app/src/main/res/layout/content_add_tag.xml
+++ b/app/src/main/res/layout/content_add_tag.xml
@@ -26,9 +26,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".android.activities.EditTag"
-    tools:showIn="@layout/activity_add_tag">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <LinearLayout
         android:layout_width="match_parent"
