--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -69,7 +69,15 @@
     <fragment
         android:id="@+id/nav_tags"
         android:name="com.ulicae.cinelog.android.v2.fragments.tag.TagListFragment"
-        android:label="@string/tags_title" />
+        android:label="@string/tags_title" >
+        <action
+            android:id="@+id/action_nav_tags_to_editTagFragment"
+            app:destination="@id/editTagFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+    </fragment>
     <fragment
         android:id="@+id/searchTmdbMovieFragment"
         android:name="com.ulicae.cinelog.android.v2.fragments.tmdbsearch.SearchTmdbMovieFragment"
@@ -201,5 +209,9 @@
             app:popUpTo="@id/nav_wishlist_serie"
             app:popUpToInclusive="true" />
     </fragment>
+    <fragment
+        android:id="@+id/editTagFragment"
+        android:name="com.ulicae.cinelog.android.v2.fragments.tag.EditTagFragment"
+        android:label="EditTagFragment" />
 
 </navigation>
