--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -2,16 +2,46 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="172dp"
+    android:layout_height="152dp"
+    android:background="@color/colorPrimary"
     android:orientation="vertical">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingStart="16dp"
-        android:paddingBottom="16dp"
-        android:gravity="center_vertical"
-        android:text="@string/nav_title"
-        tools:ignore="RtlSymmetry" />
+        android:orientation="horizontal">
 
+        <ImageView
+            android:layout_width="72dp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="10dp"
+            android:src="@drawable/icon" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:paddingStart="16dp"
+                android:text="@string/app_name"
+                android:textColor="@color/primaryTextColor"
+                android:textSize="30sp"
+                tools:ignore="RtlSymmetry" />
+
+            <TextView
+                android:id="@+id/androidVersion"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:paddingStart="16dp"
+                android:textColor="@color/colorSecondary"
+                android:textSize="20sp"
+                tools:ignore="RtlSymmetry" />
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
