--- a/app/src/main/res/menu/menu_simple.xml
+++ b/app/src/main/res/menu/menu_simple.xml
@@ -20,6 +20,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".android.v2.activities.MainActivity">
     <item
+        android:id="@+id/action_export"
+        android:orderInCategory="100"
+        android:title="@string/action_export"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_import"
+        android:orderInCategory="100"
+        android:title="@string/action_import"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
