--- a/app/src/main/res/layout/fragment_review_edition.xml
+++ b/app/src/main/res/layout/fragment_review_edition.xml
@@ -29,8 +29,6 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
@@ -46,26 +44,20 @@
                 android:layout_height="wrap_content"
                 android:gravity="start"
                 android:orientation="vertical"
-                android:paddingLeft="10dp"
-                android:paddingTop="5dp"
-                android:paddingRight="10dp"
-                android:paddingBottom="0dp">
+                android:padding="20dp">
 
                 <TextView
-                    android:id="@+id/view_kino_title_readonly"
-                    style="@style/TextAppearance.AppCompat.Large"
+                    android:id="@+id/view_kino_title_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="@string/view_kino_title_label_value"
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/view_kino_title_edit"
-                    style="@style/TextAppearance.AppCompat.Large"
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:inputType="text"
-                    android:textStyle="bold"
-                    android:visibility="gone" />
+                    android:id="@+id/view_kino_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text" />
             </LinearLayout>
 
             <LinearLayout
