--- a/app/src/main/res/layout/fragment_review_serie_item.xml
+++ b/app/src/main/res/layout/fragment_review_serie_item.xml
@@ -20,8 +20,7 @@
     android:id="@+id/view_serie_main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+    android:orientation="vertical">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
