--- a/app/src/main/res/layout/fragment_search_tmdb.xml
+++ b/app/src/main/res/layout/fragment_search_tmdb.xml
@@ -24,8 +24,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <EditText
         android:id="@+id/kino_search"
