--- a/app/src/main/res/layout/layout_kino_item.xml
+++ b/app/src/main/res/layout/layout_kino_item.xml
@@ -17,12 +17,9 @@
  along with CineLog. If not, see <https://www.gnu.org/licenses/>.
 -->
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp"
-    android:fitsSystemWindows="true">
+    android:padding="@dimen/activity_vertical_margin">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
