--- a/app/src/main/res/layout/toolbar_new.xml
+++ b/app/src/main/res/layout/toolbar_new.xml
@@ -20,13 +20,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="?attr/actionBarSize"
     android:background="?attr/colorSurface">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="match_parent"
         android:background="?attr/colorSurface"
         android:foregroundTint="?attr/colorPrimary"
         app:navigationIconTint="?attr/colorPrimary"
