--- a/app/src/main/res/layout/toolbar_new.xml
+++ b/app/src/main/res/layout/toolbar_new.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
  CineLog Copyright 2022 Pierre Rognon
 
  This file is part of CineLog.
@@ -16,8 +15,7 @@
  You should have received a copy of the GNU General Public License
  along with CineLog. If not, see <https://www.gnu.org/licenses/>.
 -->
-<com.google.android.material.appbar.AppBarLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
@@ -31,6 +29,15 @@
         android:foregroundTint="?attr/colorPrimary"
         app:navigationIconTint="?attr/colorPrimary"
         app:subtitleTextColor="?attr/colorPrimary"
-        app:titleTextColor="?attr/colorPrimary" />
+        app:titleTextColor="?attr/colorPrimary">
+
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/search_bar"
+            android:layout_gravity="end"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+        </androidx.appcompat.widget.SearchView>
+    </androidx.appcompat.widget.Toolbar>
+
 
 </com.google.android.material.appbar.AppBarLayout>
