[Cinelog / Room] start room db interface rewrite => insert movie reviews and tmdb items in a new DB

--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
- CineLog Copyright 2018 Pierre Rognon
- kinolog Copyright (C) 2017  ryan rigby
+ CineLog Copyright 2024 Pierre Rognon
 
  This file is part of CineLog.
  CineLog is free software: you can redistribute it and/or modify
@@ -28,6 +27,18 @@
                     android:title="@string/title_fragment_movie" />
                 <item
                     android:id="@+id/nav_reviews_serie"
+                    android:title="@string/title_fragment_serie" />
+            </menu>
+        </item>
+        <item
+            android:id="@+id/nav_room_reviews"
+            android:title="@string/nav_reviews_room_space">
+            <menu>
+                <item
+                    android:id="@+id/nav_reviews_room_movie"
+                    android:title="@string/title_fragment_movie" />
+                <item
+                    android:id="@+id/nav_reviews_room_serie"
                     android:title="@string/title_fragment_serie" />
             </menu>
         </item>
