--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -25,6 +25,11 @@
             app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
     </fragment>
     <fragment
+        android:id="@+id/nav_reviews_room_movie"
+        android:name="com.ulicae.cinelog.android.v2.fragments.review.list.MovieReviewRoomListFragment"
+        android:label="@string/title_fragment_movie">
+    </fragment>
+    <fragment
         android:id="@+id/nav_reviews_serie"
         android:name="com.ulicae.cinelog.android.v2.fragments.review.list.SerieReviewListFragment"
         android:label="@string/title_fragment_serie" >
