--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -50,6 +50,11 @@
             app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
     </fragment>
     <fragment
+        android:id="@+id/nav_reviews_room_serie"
+        android:name="com.ulicae.cinelog.android.v2.fragments.review.list.SerieReviewRoomListFragment"
+        android:label="@string/title_fragment_movie">
+    </fragment>
+    <fragment
         android:id="@+id/nav_wishlist_movie"
         android:name="com.ulicae.cinelog.android.v2.fragments.wishlist.list.MovieWishlistFragment"
         android:label="@string/title_fragment_wishlist_movie" >
