--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -28,18 +28,12 @@
                 <item
                     android:id="@+id/nav_reviews_serie"
                     android:title="@string/title_fragment_serie" />
-            </menu>
-        </item>
-        <item
-            android:id="@+id/nav_room_reviews"
-            android:title="@string/nav_reviews_room_space">
-            <menu>
                 <item
                     android:id="@+id/nav_reviews_room_movie"
-                    android:title="@string/title_fragment_movie" />
+                    android:title="@string/title_fragment_movie_room" />
                 <item
                     android:id="@+id/nav_reviews_room_serie"
-                    android:title="@string/title_fragment_serie" />
+                    android:title="@string/title_fragment_serie_room" />
             </menu>
         </item>
         <item
@@ -52,22 +46,26 @@
                 <item
                     android:id="@+id/nav_wishlist_serie"
                     android:title="@string/title_fragment_serie" />
-            </menu>
-        </item>
-        <item
-            android:id="@+id/nav_room_wishlist"
-            android:title="@string/nav_wishlist_room_space">
-            <menu>
                 <item
                     android:id="@+id/nav_wishlist_room_movie"
-                    android:title="@string/title_fragment_movie" />
+                    android:title="@string/title_fragment_movie_room" />
                 <item
                     android:id="@+id/nav_wishlist_room_serie"
-                    android:title="@string/title_fragment_serie" />
+                    android:title="@string/title_fragment_serie_room" />
             </menu>
         </item>
         <item
-            android:id="@+id/nav_tags"
-            android:title="@string/nav_tags_space" />
+            android:id="@+id/nav_tags_menu"
+            android:title="@string/nav_tags_space">
+            <menu>
+                <item
+                    android:id="@+id/nav_tags"
+                    android:title="@string/nav_tags_space" />
+                <item
+                    android:id="@+id/nav_room_tags"
+                    android:title="@string/nav_tags_room_space" />
+            </menu>
+        </item>
+
     </group>
 </menu>
