[Cinelog / Room] move room stuff in v3 packages and directories. Allow to access v2 and v3 app contents

--- a/app/src/main/res/layout/activity_main_v3.xml
+++ b/app/src/main/res/layout/activity_main_v3.xml
@@ -59,7 +59,7 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header"
-        app:menu="@menu/drawer_view"
+        app:menu="@menu/drawer_view_v3"
         tools:ignore="UnusedAttribute" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
