--- a/app/src/main/res/menu/drawer_view_v3.xml
+++ b/app/src/main/res/menu/drawer_view_v3.xml
@@ -23,11 +23,11 @@
             android:title="@string/nav_reviews_space">
             <menu>
                 <item
-                    android:id="@+id/nav_reviews_movie"
-                    android:title="@string/title_fragment_movie" />
+                    android:id="@+id/v3_nav_reviews_movie"
+                    android:title="@string/v3_title_fragment_movie" />
                 <item
-                    android:id="@+id/nav_reviews_serie"
-                    android:title="@string/title_fragment_serie" />
+                    android:id="@+id/v3_nav_reviews_serie"
+                    android:title="@string/v3_title_fragment_serie" />
             </menu>
         </item>
         <item
@@ -35,12 +35,22 @@
             android:title="@string/nav_wishlist_space">
             <menu>
                 <item
-                    android:id="@+id/nav_wishlist_movie"
-                    android:title="@string/title_fragment_movie" />
+                    android:id="@+id/v3_nav_wishlist_movie"
+                    android:title="@string/v3_title_fragment_movie" />
                 <item
-                    android:id="@+id/nav_wishlist_serie"
-                    android:title="@string/title_fragment_serie" />
+                    android:id="@+id/v3_nav_wishlist_serie"
+                    android:title="@string/v3_title_fragment_serie" />
             </menu>
         </item>
+        <item
+            android:id="@+id/nav_tags_menu"
+            android:title="@string/nav_tags_space">
+            <menu>
+                <item
+                    android:id="@+id/v3_nav_tags"
+                    android:title="@string/nav_tags_room_space" />
+            </menu>
+        </item>
+
     </group>
 </menu>
