[Cinelog / Room] implements wishlist search with room use

--- a/app/src/main/res/layout/wishlist_search_result_item.xml
+++ b/app/src/main/res/layout/wishlist_search_result_item.xml
@@ -22,6 +22,7 @@
     android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/kino_card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="7dp"
