--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -69,28 +69,14 @@
             app:launchSingleTop="false"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
-    </fragment>
-    <fragment
-        android:id="@+id/nav_wishlist_movie"
-        android:name="com.ulicae.cinelog.android.v2.fragments.wishlist.list.MovieWishlistFragment"
-        android:label="@string/title_fragment_wishlist_movie" >
         <action
-            android:id="@+id/action_nav_wishlist_movie_to_wishlistItemFragment"
-            app:destination="@id/wishlistItemFragment" />
-        <action
-            android:id="@+id/action_nav_wishlist_movie_to_searchTmdbMovieFragment"
-            app:destination="@id/searchTmdbMovieFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/nav_wishlist_serie"
-        android:name="com.ulicae.cinelog.android.v2.fragments.wishlist.list.SerieWishlistFragment"
-        android:label="@string/title_fragment_wishlist_serie" >
-        <action
-            android:id="@+id/action_nav_wishlist_serie_to_wishlistItemFragment"
-            app:destination="@id/wishlistItemFragment" />
-        <action
-            android:id="@+id/action_nav_wishlist_serie_to_searchTmbdSerieFragment"
-            app:destination="@id/searchTmbdSerieFragment" />
+            android:id="@+id/action_nav_reviews_room_movie_to_searchTmdbMovieFragment"
+            app:destination="@id/searchTmdbMovieRoomFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:launchSingleTop="false"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
     </fragment>
     <fragment
         android:id="@+id/nav_wishlist_room_movie"
@@ -99,7 +85,7 @@
             android:id="@+id/action_nav_wishlist_room_to_wishlistItemFragment"
             app:destination="@id/wishlistItemRoomFragment" />
         <action
-            android:id="@+id/action_nav_wishlist_room_to_searchTmbdSerieFragment"
+            android:id="@+id/action_nav_wishlist_room_to_searchTmbdMovieFragment"
             app:destination="@id/searchTmbdSerieFragment" />
     </fragment>
     <fragment
@@ -147,7 +133,7 @@
             app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
         <action
             android:id="@+id/action_searchTmdbMovieFragment_to_wishlistItemFragment"
-            app:destination="@id/wishlistItemFragment" />
+            app:destination="@id/wishlistItemRoomFragment" />
     </fragment>
     <fragment
         android:id="@+id/searchTmbdSerieFragment"
@@ -172,7 +158,15 @@
             app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
         <action
             android:id="@+id/action_searchTmbdSerieFragment_to_wishlistItemFragment"
-            app:destination="@id/wishlistItemFragment" />
+            app:destination="@id/wishlistItemRoomFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/searchTmdbMovieRoomFragment"
+        android:name="com.ulicae.cinelog.android.v2.fragments.tmdbsearch.SearchTmdbMovieFragment"
+        android:label="@string/title_activity_add_kino" >
+        <action
+            android:id="@+id/action_searchTmdbMovieRoomFragment_to_viewKinoRoomFragment"
+            app:destination="@id/viewReviewRoomFragment" />
     </fragment>
     <fragment
         android:id="@+id/viewReviewRoomFragment"
@@ -259,36 +253,6 @@
             app:exitAnim="@anim/nav_default_exit_anim"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim" />
-    </fragment>
-    <fragment
-        android:id="@+id/wishlistItemFragment"
-        android:name="com.ulicae.cinelog.android.v2.fragments.wishlist.item.WishlistItemFragment"
-        android:label="@string/title_fragment_wishlist_movie" >
-        <action
-            android:id="@+id/action_wishlistItemFragment_to_editReviewFragment"
-            app:destination="@id/editReviewFragment"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:exitAnim="@anim/nav_default_exit_anim"
-            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
-        <action
-            android:id="@+id/action_wishlistItemFragment_to_nav_wishlist_movie"
-            app:destination="@id/nav_wishlist_movie"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:exitAnim="@anim/nav_default_exit_anim"
-            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-            app:popExitAnim="@anim/nav_default_pop_exit_anim"
-            app:popUpTo="@id/nav_wishlist_movie"
-            app:popUpToInclusive="true" />
-        <action
-            android:id="@+id/action_wishlistItemFragment_to_nav_wishlist_serie"
-            app:destination="@id/nav_wishlist_serie"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:exitAnim="@anim/nav_default_exit_anim"
-            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-            app:popExitAnim="@anim/nav_default_pop_exit_anim"
-            app:popUpTo="@id/nav_wishlist_serie"
-            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/wishlistItemRoomFragment"
